# walng

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
cmake/: CMakeUtils.cmake
code/: CMakeLists.txt  Config.h  FetchWorker.cpp  FetchWorker.h  NetThread.cpp  NetThread.h  Request.h  Response.h  Template.cpp  Template.h  Theme.cpp  Theme.h  basexx_theme.cpp  basexx_theme.cppm  color.cppm  colors.cpp  colors.h  config.cpp  config.cppm  config.h  config.yaml  curl.cpp  curl.h  curl_test.cpp  curl_test.h  download.cpp  download.cppm  generate.cpp  generate.h  gruvbox-dark.yaml  main.cpp  rofi-colors.rasi  theme.cpp  theme.h  utils.cpp  utils.cppm  utils.h  version.cppm  version.h
code/net/: CurlEasyHandle.h  CurlEasyHandle_test.cpp  CurlUrlHandle.h  CurlUrlHandle_test.cpp  download.cpp  download.h  error.h  error_test.cpp
man/: CMakeLists.txt  walng.1
templates/: rofi-colors.rasi  waybar-colors.css
